--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
 <body>
     
-    <div id="container" >
+    <div id="input">
+        <input type="text" placeholder="Введите количество квадратов" id="count">
+        <input type="button" value="ok" id="ok" onclick="access()">
+    </div>
+
+    <div id="container">
 
     </div>
     
